syntax = "proto3";

option go_package = "./slowpizza";

package proto;

// Agent represents a Pizza delivery agent.
service Agent {
  rpc OrderItem(OrderRequest) returns (OrderReply) {}
  rpc OrderMultipleItems(stream OrderRequest) returns (stream OrderReply) {}
}

message OrderRequest {
  string item = 1;
  int32 confirm_count = 2;
  int64 confirm_interval_s = 3;
}

message OrderReply {
  string message = 1;
}
